Creacion de las entidades y conexion a la base de datos de MYSQL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=Ferreteria
+
+# Configuración de la base de datos con MYSQL
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/Ferreteria
+spring.datasource.username=root
+spring.datasource.password=sebas1207
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
