Se implementa el endpoint para crear un usuario, tambien se le implementa jwt con sprin security para que tenga autenticacion a la hora del logeo, y ademas si el usuario no tiene permiso a ciertos endpoints me muestra el mensaje de erro

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.password=sebas1207
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
+
+#Con esta linea se pueden esconder los esquemas
+springdoc.swagger-ui.default-models-expand-depth=-1
