Se crean los metodos para listar y crear empleados en donde las credenciales de este mismo son enviadas al correo que dio

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,14 @@ spring.jpa.show-sql=true
 
 #Con esta linea se pueden esconder los esquemas
 springdoc.swagger-ui.default-models-expand-depth=-1
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=xgoguetaxd@gmail.com
+spring.mail.password=ceeg wpqm zryj kqud
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
